# Vulkan-Mesh-Shaders-Isosurface-Extraction

./: .gitignore  CMakeLists.txt  README.md
shaders/: CMakeLists.txt
src/: CMakeLists.txt  camera.cpp  camera.h  main.cpp
src/Core/: vk_barriers.cpp  vk_barriers.h  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_initializers.h  vk_loader.cpp  vk_loader.h  vk_pipelines.cpp  vk_pipelines.h  vk_types.h
src/Data/: ChunkIntervalTree.cpp  ChunkIntervalTree.h  ChunkedVolumeData.cpp  ChunkedVolumeData.h  SVO.cpp  SVO.h
src/Materials/: GLTFMetallicMaterial.cpp  GLTFMetallicMaterial.h  Material.h
src/Pass/: ChunkVisualizationPass.cpp  ChunkVisualizationPass.h  CircleGridPlanePass.cpp  CircleGridPlanePass.h  GLTFMetallicPass.cpp  GLTFMetallicPass.h  HZBDownSamplePass.cpp  HZBDownSamplePass.h  MarchingCubesIndirectPass.cpp  MarchingCubesIndirectPass.h  MarchingCubesLookup.h  MarchingCubesPass.cpp  MarchingCubesPass.h  MarchingCubesPassSDF.cpp  MarchingCubesPassSDF.h  MeshShaderTriangleTestPass.cpp  MeshShaderTriangleTestPass.h  OccluderPrePass.cpp  OccluderPrePass.h  VoxelRenderingIndirectPass.cpp  VoxelRenderingIndirectPass.h  VoxelRenderingIndirectSVOPass.cpp  VoxelRenderingIndirectSVOPass.h
src/Scenes/: CTheadChunksScene.cpp  CTheadChunksScene.h  CTheadScene.cpp  CTheadScene.h  OrganVisualizationChunksScene.cpp  OrganVisualizationChunksScene.h  OrganVisualizationScene.cpp  OrganVisualizationScene.h  Scene.cpp  Scene.h  TestbedScene.cpp  TestbedScene.h  VoxelRenderingSVOScene.cpp  VoxelRenderingSVOScene.h  VoxelRenderingScene.cpp  VoxelRenderingScene.h
src/Tests/: SVOUnitTests.cpp  SVOUnitTests.h
src/Util/: LodSelectorAsync.cpp  LodSelectorAsync.h  Noise.h  Perlin.h  VoxelTerrainGenerator.h
(+72 files in other folders)
